added proper background for the bottom bar

--- a/app/src/main/res/layout/activity_tab_switcher_bottom_bar_experiment.xml
+++ b/app/src/main/res/layout/activity_tab_switcher_bottom_bar_experiment.xml
@@ -46,10 +46,10 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/bottomBarHeight"
         android:layout_gravity="bottom"
-        android:background="?attr/colorPrimary"
+        android:background="@drawable/bottom_navigation_bar_bg"
         android:gravity="center"
         android:orientation="horizontal"
-        android:elevation="4dp"
+        android:elevation="8dp"
         app:layoutResource="@layout/layout_tabs_bottom_navigation_bar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
