--- a/app/src/main/res/layout/fragment_browser_tab.xml
+++ b/app/src/main/res/layout/fragment_browser_tab.xml
@@ -28,8 +28,8 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/bottomBarHeight"
         android:layout_gravity="bottom"
-        android:background="?attr/colorPrimary"
-        android:elevation="4dp"
+        android:background="@drawable/bottom_navigation_bar_bg"
+        android:elevation="8dp"
         android:gravity="center"
         android:orientation="horizontal"
         app:layoutResource="@layout/layout_browser_bottom_navigation_bar"
