bookmarks title show in single line

--- a/app/src/main/res/layout/view_bookmark_entry.xml
+++ b/app/src/main/res/layout/view_bookmark_entry.xml
@@ -54,6 +54,9 @@
         android:textColor="?attr/bookmarkTitleTextColor"
         android:textSize="16sp"
         android:textStyle="normal"
+        android:maxLines="1"
+        android:singleLine="true"
+        android:ellipsize="end"
         app:layout_constraintBottom_toTopOf="@+id/url"
         app:layout_constraintEnd_toStartOf="@+id/overflowMenu"
         app:layout_constraintHorizontal_bias="0.5"
