background favicon compatible with dark theme

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -32,6 +32,7 @@
     <attr name="tabsFireTextColor" format="color" />
     <attr name="tabCardBackgroundColor" format="color" />
     <attr name="bookmarkIconColor" format="color" />
+    <attr name="bookmarkFaviconBackground" format="color" />
     <attr name="bookmarkTitleTextColor" format="color" />
     <attr name="bookmarkSubtitleTextColor" format="color" />
     <attr name="settingsItemTextColor" format="color" />
