--- a/app/src/main/res/drawable/subtle_favicon_background.xml
+++ b/app/src/main/res/drawable/subtle_favicon_background.xml
@@ -16,7 +16,7 @@
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="@color/whiteSix" />
+    <solid android:color="?attr/bookmarkFaviconBackground" />
     <size
         android:width="40dp"
         android:height="40dp" />
