introduce fireproof site option menu and logic for actions

--- a/app/src/main/res/layout/popup_window_browser_menu.xml
+++ b/app/src/main/res/layout/popup_window_browser_menu.xml
@@ -96,6 +96,11 @@
                 android:text="@string/addBookmarkMenuTitle" />
 
             <TextView
+                android:id="@+id/fireproofWebsitePopupMenuItem"
+                style="@style/BrowserTextMenuItem"
+                android:text="@string/fireproofWebsiteMenuTitle" />
+
+            <TextView
                 android:id="@+id/sharePageMenuItem"
                 style="@style/BrowserTextMenuItem"
                 android:text="@string/shareMenuTitle" />
