improved color selection for api 21

--- a/app/src/main/res/color/bottom_bar_icon_color_selector_21.xml
+++ b/app/src/main/res/color/bottom_bar_icon_color_selector_21.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ Copyright (c) 2018 DuckDuckGo
+  ~ Copyright (c) 2020 DuckDuckGo
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -16,6 +16,6 @@
   -->
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_enabled="false" android:color="?attr/bottomBarIconColorDisabled" />
-    <item android:state_enabled="true" android:color="?bottomBarIconColor"/>
+    <item android:state_enabled="false" android:color="@color/subtleGray" />
+    <item android:state_enabled="true" android:color="@color/brownishGray"/>
 </selector>
