--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -150,7 +150,7 @@
         <item name="android:paddingTop">6dp</item>
         <item name="android:paddingBottom">6dp</item>
         <item name="android:background">?selectableItemBackground</item>
-        <item name="android:tint">@color/browser_menu_icon</item>
+        <item name="android:tint">@color/bottom_bar_icon_color_selector_21</item>
     </style>
 
     <style name="BrowserTextMenuItem">
