--- a/app/src/main/res/color/checkbox_color_selector.xml
+++ b/app/src/main/res/color/checkbox_color_selector.xml
@@ -16,6 +16,6 @@
   -->
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_enabled="false" android:color="@color/subtleGray" />
-    <item android:state_enabled="true" android:color="@color/brownishGray"/>
+    <item android:state_checked="false" android:color="?attr/bottomBarIconColorDisabled" />
+    <item android:state_checked="true" android:color="?bottomBarIconColor"/>
 </selector>
