--- a/app/src/main/res/layout/popup_window_browser_menu.xml
+++ b/app/src/main/res/layout/popup_window_browser_menu.xml
@@ -109,16 +109,17 @@
                 style="@style/BrowserTextMenuItem"
                 android:text="@string/addToHome" />
 
-            <CheckBox
+            <androidx.appcompat.widget.AppCompatCheckBox
                 android:id="@+id/requestDesktopSiteCheckMenuItem"
                 style="@style/BrowserTextMenuItem"
+                android:theme="@style/PopUpMenuSwitchTheme"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="20dp"
                 android:button="@null"
                 android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
-                android:drawablePadding="30dp"
-                android:paddingStart="30dp"
+                android:drawablePadding="24dp"
+                android:paddingStart="24dp"
                 android:paddingEnd="0dp"
                 android:text="@string/requestDesktopSiteMenuTitle" />
 
