--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -83,7 +83,7 @@
 
         <item name="privacyDashboardLogoLetterTextColor">@color/subtleGray</item>
 
-        <item name="bottomBarIconColor">?toolbarIconColor</item>
+        <item name="bottomBarIconColor">@color/grayish</item>
         <item name="bottomBarIconColorDisabled">@color/midGray</item>
 
     </style>
@@ -207,6 +207,11 @@
 
     <style name="DaxDialogFragment" parent="android:Theme.DeviceDefault.Light.NoActionBar">
         <item name="android:windowTranslucentStatus">true</item>
+    </style>
+
+    <style name="PopUpMenuSwitchTheme">
+        <item name="colorAccent">@color/cornflowerBlue</item>
+        <item name="android:textColorSecondary">?bottomBarIconColor</item>
     </style>
 
 </resources>
