added new style for TextInputLayout

--- a/app/src/main/res/layout/edit_bookmark.xml
+++ b/app/src/main/res/layout/edit_bookmark.xml
@@ -20,18 +20,18 @@
     android:layout_height="match_parent"
     android:paddingTop="20dp">
 
-
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/bookmarkTitleInputContainer"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
+        style="@style/TextInputLayoutTheme"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <EditText
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/titleInput"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -43,12 +43,13 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/bookmarkUrlInputContainer"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
+        style="@style/TextInputLayoutTheme"
         app:layout_constraintTop_toBottomOf="@id/bookmarkTitleInputContainer">
 
-        <EditText
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/urlInput"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
