--- a/app/src/main/res/layout/include_omnibar_toolbar.xml
+++ b/app/src/main/res/layout/include_omnibar_toolbar.xml
@@ -59,7 +59,7 @@
 
                         <androidx.constraintlayout.widget.ConstraintLayout
                             android:id="@+id/networksContainer"
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent" />
@@ -98,7 +98,7 @@
                             android:imeOptions="flagNoExtractUi|actionGo|flagNoPersonalizedLearning"
                             android:inputType="textUri|textNoSuggestions"
                             android:maxLines="1"
-                            android:paddingStart="5dp"
+                            android:paddingStart="36dp"
                             android:paddingEnd="8dp"
                             android:selectAllOnFocus="true"
                             android:textColor="?attr/omnibarTextColor"
@@ -108,7 +108,7 @@
                             android:textStyle="normal"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toStartOf="@id/clearTextButton"
-                            app:layout_constraintStart_toEndOf="@id/privacyGradeButton"
+                            app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
                             tools:text="https://duckduckgo.com/?q=areallylongexampleexample" />
 
