--- a/app/src/main/res/layout/http_authentication.xml
+++ b/app/src/main/res/layout/http_authentication.xml
@@ -15,38 +15,39 @@
   -->
 
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                   android:layout_width="match_parent"
-                                                   android:layout_height="match_parent" xmlns:tools="http://schemas.android.com/tools"
-                                                   android:paddingTop="20dp">
-
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingTop="20dp">
 
     <TextView
         android:id="@+id/httpAuthInformationText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:layout_marginStart="20dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="20dp"
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/httpAuthUsernameContainer"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
+        style="@style/TextInputLayoutTheme"
         android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
         android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
         app:layout_constraintTop_toBottomOf="@id/httpAuthInformationText">
 
-        <EditText
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/usernameInput"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/authenticationDialogUsernameHint"
-            android:inputType="text"
-            android:importantForAutofill="yes"
             android:autofillHints="username"
+            android:hint="@string/authenticationDialogUsernameHint"
+            android:importantForAutofill="yes"
+            android:inputType="text"
             tools:ignore="UnusedAttribute" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -54,19 +55,20 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/httpAuthPasswordContainer"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
+        style="@style/TextInputLayoutTheme"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         app:layout_constraintTop_toBottomOf="@id/httpAuthUsernameContainer">
 
-        <EditText
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/passwordInput"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/authenticationDialogPasswordHint"
-            android:inputType="textWebPassword"
-            android:importantForAutofill="yes"
             android:autofillHints="password"
+            android:hint="@string/authenticationDialogPasswordHint"
+            android:importantForAutofill="yes"
+            android:inputType="textWebPassword"
             tools:ignore="UnusedAttribute" />
 
     </com.google.android.material.textfield.TextInputLayout>
