apply ui fixes to bookmarks

--- a/app/src/main/res/layout/view_bookmark_entry.xml
+++ b/app/src/main/res/layout/view_bookmark_entry.xml
@@ -19,8 +19,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="4dp"
-    android:layout_marginBottom="4dp"
+    android:paddingTop="14dp"
+    android:paddingBottom="14dp"
+    android:paddingStart="16dp"
+    android:paddingEnd="16dp"
     android:background="?android:attr/selectableItemBackground"
     android:clickable="true"
     android:focusable="true">
@@ -29,7 +31,6 @@
         android:id="@+id/favicon_container"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_marginStart="22dp"
         android:background="@drawable/subtle_favicon_background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -50,7 +51,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:fontFamily="sans-serif"
-        android:paddingTop="4dp"
         android:textColor="?attr/bookmarkTitleTextColor"
         android:textSize="16sp"
         android:textStyle="normal"
@@ -59,7 +59,6 @@
         android:ellipsize="end"
         app:layout_constraintBottom_toTopOf="@+id/url"
         app:layout_constraintEnd_toStartOf="@+id/overflowMenu"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@id/favicon_container"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Bookmark" />
@@ -85,8 +84,6 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:background="?android:attr/selectableItemBackground"
-        android:paddingStart="14dp"
-        android:paddingEnd="14dp"
         android:scaleType="center"
         android:src="@drawable/ic_overflow_bookmarks_24dp"
         app:layout_constraintBottom_toBottomOf="parent"
