apply ui fixes to fireproof websites

--- a/app/src/main/res/layout/view_fireproof_website_entry.xml
+++ b/app/src/main/res/layout/view_fireproof_website_entry.xml
@@ -19,17 +19,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="4dp"
-    android:layout_marginBottom="4dp"
-    android:background="?android:attr/selectableItemBackground"
-    android:clickable="true"
-    android:focusable="true">
+    android:layout_marginTop="8dp"
+    android:layout_marginBottom="8dp"
+    android:layout_marginStart="16dp"
+    android:layout_marginEnd="16dp">
 
     <FrameLayout
         android:id="@+id/fireproofWebsiteEntryFaviconContainer"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_marginStart="22dp"
         android:background="@drawable/subtle_favicon_background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -68,8 +66,6 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:background="?android:attr/selectableItemBackground"
-        android:paddingStart="14dp"
-        android:paddingEnd="14dp"
         android:scaleType="center"
         android:src="@drawable/ic_overflow_bookmarks_24dp"
         app:layout_constraintBottom_toBottomOf="parent"
