--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -30,6 +30,7 @@
         <item name="android:windowActivityTransitions">true</item>
         <item name="autoCompleteTextViewStyle">@style/AutoCompleteTextViewStyle</item>
         <item name="android:statusBarColor">?colorPrimary</item>
+        <item name="snackbarButtonStyle">@style/snackbarButtonStyle</item>
     </style>
 
     <style name="AppTheme.BaseDark">
