proper style for checkbox

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -210,7 +210,7 @@
     </style>
 
     <style name="PopUpMenuSwitchTheme">
-        <item name="colorAccent">@color/cornflowerBlue</item>
+        <item name="colorAccent">?colorAccent</item>
         <item name="android:textColorSecondary">?bottomBarIconColor</item>
     </style>
 
